--- a/css/upriver.css
+++ b/css/upriver.css
@@ -11,26 +11,6 @@ footer {
   line-height: 3rem;
 }
 
-[data-toggle="tooltip"] {
+[data-bs-toggle="tooltip"] {
   border-bottom: 1px dotted black;
-}
-
-/* Patches until Bootstrap v4.0.0-beta is released. */
-.input-group-btn {
-  align-items: center;
-  flex-direction: row;
-}
-
-.input-group-btn > .btn {
-  flex: none;
-}
-
-.input-group-btn a {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
-
-.input-group-btn button {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
 }
